--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,7 +82,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    # - .env
+    - .env
 
 
 
@@ -135,6 +135,9 @@ flutter:
     - family: Norwester
       fonts:
         - asset: fonts/Norwester.otf
+    - family: Audiowide
+      fonts:
+        - asset: fonts/Audiowide.ttf
 
 
   #   - family: Trajan Pro
