--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   permission_handler: ^10.2.0
   flutter_launcher_icons: ^0.11.0
   flutter_neumorphic: ^3.2.0
+  animated_notch_bottom_bar: ^0.0.6
   http: ^0.13.5
   flutter:
     sdk: flutter
