--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   flutter_launcher_icons: ^0.11.0
   flutter_neumorphic: ^3.2.0
   http: ^0.13.5
+  firebase_messaging: ^14.2.5
+  flutter_local_notifications: ^13.0.0
   flutter:
     sdk: flutter
 
