--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,28 +30,22 @@ dependencies:
   flutter_signin_button: ^2.0.0
   sizer: ^2.0.15
   cached_network_image: ^3.2.3
-  googleapis: ^10.1.0
   flutter_inappwebview: ^5.7.2+3
   share_plus: ^6.3.1
-#  qr_code_scanner:
-  googleapis_auth: ^1.3.1
   url_launcher: ^6.1.9
   timeago: ^3.3.0
   barcode_scan2: ^4.2.3
   flutter_dotenv: ^5.0.2
   carousel_slider: ^4.2.1
-  bottom_drawer: ^0.0.5
   from_css_color: ^2.0.0
-  background_app_bar: ^2.0.1
   photo_view: ^0.14.0
   google_maps_flutter: ^2.2.3 
   shared_preferences: ^2.0.17
   permission_handler: ^10.2.0
-  flutter_launcher_icons: ^0.11.0
-  flutter_neumorphic: ^3.2.0
   http: ^0.13.5
   firebase_messaging: ^14.2.5
   flutter_local_notifications: ^13.0.0
+  geolocator: ^9.0.2
   flutter:
     sdk: flutter
 
