--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-       <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyDzSgJFOZy-VN1JYWrdWe259z2NA-Rp77A"/>
+       <meta-data android:name="com.google.android.geo.API_KEY" android:value="${dotenv.env['LOGIN_KEY']}"/>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
