--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_messaging: ^14.2.5
   flutter_local_notifications: ^13.0.0
   geolocator: ^9.0.2
+  flutter_config: ^2.0.0
   flutter:
     sdk: flutter
 
